--- a/code/Projects/ExpenseManager/FundTracker/expense/templates/expense_list.html
+++ b/code/Projects/ExpenseManager/FundTracker/expense/templates/expense_list.html
@@ -1,46 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense List</title>
+{% extends 'base.html' %}
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="text-center mb-4">All Expenses</h1>
-        <table class="table table-striped table-bordered">
-            <thead class="table-dark">
-                <tr>
-                    <th>Title</th>
-                    <th>Amount</th>
-                    <th>Category</th>
-                    <th>Payment Method</th>
-                    <th>Priority</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for t in data %}
-                <tr>
-                    <td>{{ t.title }}</td>
-                    <td>{{ t.amount }}</td>
-                    <td>{{ t.category }}</td>
-                    <td>{{ t.payment_method }}</td>
-                    <td>{{ t.priority }}</td>
-                    <td>
-                        <a href="{%url 'expensedetail' t.id %}">View</a>
-                        <a href="{%url 'expenseremove' t.id %}">Delete</a>
-                        <a href="{%url 'expenseupdate' t.id %}">Update</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+{% block main_block %}
+<div class="container">
+    <form action="">
+        <select name="category" id="" onchange="this.form.submit()">
+            <option value="">Chose Category</option>
+            {%for cat in categories%}
+            <option value="{{cat}}">{{cat}}</option>
+            {%endfor%}
+        </select>
+    </form>
+</div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">All Expenses</h1>
+    <table class="table table-striped table-bordered">
+        <thead class="table-dark">
+            <tr>
+                <th>Title</th>
+                <th>Amount</th>
+                <th>Category</th>
+                <th>Payment Method</th>
+                <th>Priority</th>
+                <th>Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for t in data %}
+            <tr>
+                <td>{{ t.title }}</td>
+                <td>{{ t.amount }}</td>
+                <td>{{ t.category }}</td>
+                <td>{{ t.payment_method }}</td>
+                <td>{{ t.priority }}</td>
+                <td>
+                    <a href="{%url 'expensedetail' t.id %}">View</a>
+                    <a href="{%url 'expenseremove' t.id %}">Delete</a>
+                    <a href="{%url 'expenseupdate' t.id %}">Update</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+
+
+{% endblock %}
