--- a/code/Projects/ExpenseManager/FundTracker/expense/templates/expense_update.html
+++ b/code/Projects/ExpenseManager/FundTracker/expense/templates/expense_update.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Update</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block main_block %}
     <form method="post">
         {% csrf_token %}
         <table>
@@ -13,5 +8,4 @@
         </table>
         <input type="submit">
     </form>
-</body>
-</html>
+    {% endblock %}
